# connexion_api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  openapi.yaml  pyproject.toml
api/: anomaly_detection.py  tenants.py
app/: __main__.py  app.py  bootstrap.py  main.py  models.py  settings.py
app/api/: anomaly_detection.py  tenants.py
connexion_api/: .env.exmaple
connexion_api/app/: __main__.py  bootstrap.py
k8s/: connexion-api-deployment.yaml  connexion-api-service.yaml  deployment.yaml  env-configmap.yaml  opensearch-deployment.yaml  opensearch-service.yaml
schema/: openapi.yaml
